--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ descriptionTwo: '艺术家思维去思考问题，工匠创造精神去开发'
 google_analytics:
 
 # Website favicon
-favicon: /img/favicon.png
+favicon: /img/favicon.jpg
 
 # rss file
 rss: atom.xml
@@ -180,7 +180,7 @@ mathjax: true
 #beianloc:
 beian: 
 # Enable
-  enable: true
+  enable: false
 # Beian location，for example：粤ICP备
   beianloc:
 # Beian ID，for example：2021022134号。
@@ -189,7 +189,7 @@ beian:
 # Police Beian
 police:
 # Enable
-  enable: true
+  enable: false
 # Beian location，for example: 粤公网安备
   beianloc:
 # Beian ID, for example: 44010602009049号
