--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ welcome_cover: /img/cover.jpg
 cover: /img/welcome-cover.jpg
 
 # Avatar
-avatar: https://s2.ax1x.com/2019/09/19/nLtSiD.png
+avatar: /img/favicon.jpg
 
 # Disable default scrollbar
 scrollbar: true
